fix margin collapse

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,8 +61,8 @@ div {
   top:0%;
   left : 0;
   right : 0;
-  padding: 0% 0%;
-  margin: 3em auto;
+  padding: 33% 0%;
+  margin: 0 auto;
 }
 
 a {
